--- a/ChatApp01/View/CustomCell.xib
+++ b/ChatApp01/View/CustomCell.xib
@@ -9,11 +9,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="83" id="KGk-i7-Jjw" customClass="CustomCell" customModule="ChatApp01" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="465" height="83"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="75" id="KGk-i7-Jjw" customClass="CustomCell" customModule="ChatApp01" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="465" height="75"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="465" height="83"/>
+                <rect key="frame" x="0.0" y="0.0" width="465" height="75"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sx6-lU-Nmt">
@@ -28,7 +28,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aZY-xh-5Kz">
-                        <rect key="frame" x="100" y="30" width="345" height="45"/>
+                        <rect key="frame" x="100" y="30" width="345" height="75"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
@@ -42,7 +42,7 @@
                 <outlet property="messageLabel" destination="aZY-xh-5Kz" id="N8d-gG-E8y"/>
                 <outlet property="userNameLabel" destination="MMb-bI-JRr" id="sSh-PY-5Wf"/>
             </connections>
-            <point key="canvasLocation" x="136.95652173913044" y="-64.620535714285708"/>
+            <point key="canvasLocation" x="273" y="-73"/>
         </tableViewCell>
     </objects>
 </document>
